--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="login">Login</string>
     <string name="signOut">Sign Out</string>
     <string name="SignUp"><bold>+</bold></string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
 </resources>
