--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="SignUp"><bold>+</bold></string>
     <string name="description">Description</string>
     <string name="title">Title</string>
+    <string name="timeFrame">Time</string>
+    <string name="attending">Attend</string>
+    <string name="notgoing">Decline</string>
 </resources>
