fixed keyboard blocking edit text and created a better way to pick the time when creating event

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="name_hint">Username</string>
     <string name="pwd_hint">Password</string>
     <string name="enter_info">Enter Information</string>
+    <string-array name="time_options">
+        <item>AM</item>
+        <item>PM</item>
+    </string-array>
 </resources>
